# TheoEco_Demo_Colonization

./: Landscape_to_xlsx.py  README.md  config_resistance_example.xlsx  config_spatial_example.xlsx  config_species_example.xlsx  metacomm_py.py
CProj_TheoEco/: CMakeLists.txt  colonization_model.cpp  metacomm.cpp  mtcom.py  trait_evolve_demo.cpp
